--- a/JohnTesting/testing.css
+++ b/JohnTesting/testing.css
@@ -127,7 +127,7 @@ p{
 
 
 *{
-  margin 0;
+  margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
@@ -138,12 +138,12 @@ p{
   background-position:center;
   max-width: 100px;
   height: 20vh;
-  magin: auto;
+  margin: auto;
   position: relative;
-  
 }
 
-#professor{}
+/*
+#professor{}*/
 
 #textBox{
   position: absolute;
