--- a/template/styles.css
+++ b/template/styles.css
@@ -12,11 +12,14 @@
 }
 
 #searchbar {
-  padding-right: 4%;
-  padding-top: 13px;
-  fill-opacity: 50%;
+  position: fixed;
 }
 
+.endOfTop{
+  position:absolute;
+  right: 60px;
+  top: 25px;
+}
 #topnav {
   /*padding: 5px;*/
   padding-left: 4%;
@@ -144,6 +147,10 @@ form{
   background-color: #e9e9e9;
 }
 
+
+
+
+
 /* This is the class info page css ////////////////////////////////////////////////////////////////////////*/
 .flex-container {
   display: flex;
@@ -173,13 +180,22 @@ form{
 
 }
 
-.tablinks, .tab {
+.tablinks, .profLinks, .tab {
   color: white;
+  text-align: center;
+  background-color: rgb(19, 40, 76);
+}
+
+.tablinks{
+  width: 33.3%;
+}
+
+.tablinks:hover{
+  background-color: #b1102b !important;
 }
 
 /* Style the buttons inside the tab */
 .tab button {
-  background-color: inherit;
   float: left;
   border: none;
   outline: none;
@@ -190,19 +206,20 @@ form{
 }
 
 /* Change background color of buttons on hover */
-.tab button:hover, .classTitle {
+.tab button:hover{
   background-color: #b1102b;
 }
 
 .classTitle {
   color: white;
-  width: 300px;
-  margin: 0 2px 0 40px;
+  width: 30%;
+  text-align: center;
 }
 .classTitle2 {
   color: black;
   background-color: white;
-  width: 500px;
+  width: 70%;
+  border-left: 1px solid black;
 }
 
 #classDescript {
@@ -211,3 +228,102 @@ form{
 #instructor {
   margin-left: 40px;
 }
+
+
+
+
+/* This is the professor pages css stuff ///////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+h1 {
+  text-align: center;
+  color: black;
+}
+
+h2 {
+  text-align: center;
+  color: yellow;
+}
+
+h3 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+.tabContent{
+  align-items: center;
+}
+.upload-icon{
+  width: 150px;
+  height: 150px;
+  border-radius: 150px;
+  margin-left: calc(50% - 75px);
+  border: 1px solid black;
+}
+
+.profLinks{
+  width: 25%;
+}
+
+.profLinks:hover{
+  background-color: #b1102b;
+}
+/*
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
+*/
+
+/*
+.container {
+  background-size: cover;
+  background-position: center;
+  max-width: 100px;
+  height: 20vh;
+  margin: auto;
+  position: relative;
+}
+*/
+/*
+#professor{}
+*/
+/*
+#textBox {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: #fff;
+  padding: 10px;
+}
+
+#prevText {
+  position: absolute;
+  left: 50%;
+  bottom: 30%;
+  transform: translateX(-50%);
+  width: 90%;
+  font-size: 32px;
+  text-align: center;
+  text-shadow: 2px 2px 20px #000;
+}
+
+
+.picture {
+  /*   Parent class will make the image of professor go to the center */
+  /*position: relative;
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  border-radius: 1000px;
+  /*Turns the image of professor into a circle*/
+
+/*} */
