This changes the "Testing some Dumb shit" showing up on the front page and adds in image data

--- a/template/index.html
+++ b/template/index.html
@@ -46,15 +46,15 @@
 <footer>
   <div class="bottombar">
     <!--Footer navigation-->
-    <p id="navtitle">Testing</p>
+    <p id="navtitle">Welcome to the Home Page:</p>
     <ul id="bottomnav">
-      <li>Testing some dumb shit</li>
+      <li>Search classes with the buttons</li>
     </ul>
     <ul id="bottomnav">
-      <li>Testing some dumb shit</li>
+      <li>Search classes by professor</li>
     </ul>
     <ul id="bottomnav">
-      <li>Testing some dumb shit</li>
+      <li>Search classes by departments</li>
     </ul>
     <!--Copyright year-->
     <div id="copyright">
