--- a/template/styles.css
+++ b/template/styles.css
@@ -168,7 +168,8 @@ form{
 
 .flex-containerRow > div {
   text-align: center;
-  line-height: 10px;
+  display: block;
+  overflow: auto;
   font-size: 20px;
 }
 
@@ -264,7 +265,7 @@ p {
 }
 
 .profLinks{
-  width: 25%;
+  width: 33.33%;
 }
 
 .profLinks:hover{
