Lots of fixes/changes
Created faculty page, fixed navbar links (some) and add style1.css.

--- a/template/CSCIcoursepage.html
+++ b/template/CSCIcoursepage.html
@@ -92,7 +92,7 @@
                 </div>
                 <!--Flex container for Class information-->
                 <div class="flex-containerRow">
-                    <img id="instructor" src="MatinPirouz.jpg">    
+                    <img id="instructor" src="placeHolder.jpg">    
                         <p id="profStats">
                             Ms. Nothing McStuffing
                             <br>-Place holder
