--- a/template/index.html
+++ b/template/index.html
@@ -19,10 +19,10 @@
   <div class="topbar">
     <div>
       <ul id="topnav">
-        <li onclick="loadClassTemplate()"><a href="#home">FS Class info logo</a></li>
-        <li onclick="loadProfTemplate()"><a href="#aboutus">About Us</a></li>
-        <li onclick="departments()"><a href="#departments">Departments</a></li>
-        <li onclick="faculty()"><a href="#faculty">Faculty</a></li>
+        <li><a href="index.html">FS Class info logo</a></li>
+        <li><a href="CSCIcoursepage.html">Courses</a></li>
+        <li><a href="#departments">Departments</a></li>
+        <li><a href="CSFaculty.html">Faculty</a></li>
         <!--Search bar and 'Go' button-->
       </ul>
       <div class="endOfTop">
