--- a/template/styles1.css
+++ b/template/styles1.css
@@ -1,6 +1,6 @@
 /* Faculty Page CSS */
 #faculty{
-    font-family:'Courier New', Courier, monospace;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-collapse: collapse;
     width: 50%;
     background-color: #ced1d4;
@@ -10,6 +10,7 @@
     border-radius: 8px;
     margin-top: 60px;
     margin-bottom: 160px;
+    font-size: 18px;
     /*padding: 5px;*/
 }
 #faculty td, #faculty th{
@@ -26,5 +27,6 @@
     color: white;
 }
 #pageTitle{
-    text-align: left; color: #000; padding-left: 20%; margin-top: 80px;
+    text-align: center; color: #000;  margin-top: 80px; background-color: whitesmoke;
+    width: 40%;
 }
