--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
         <li><a href="index.html">FS Class info logo</a></li>
         <li><a href="CSCIcoursepage.html">Courses</a></li>
         <li><a href="#departments">Departments</a></li>
-        <li><a href="CSFaculty.html">Faculty</a></li>
+        <li><a onclick = "displayFacultyPage()">Faculty</a></li>
         <!--Search bar and 'Go' button-->
       </ul>
       <div class="endOfTop">
