Added Department Pages

--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,7 @@
       <ul id="topnav">
         <li><a href="index.html">FS Class info logo</a></li>
         <li><a href="CSCIcoursepage.html">Courses</a></li>
-        <li><a href="#departments">Departments</a></li>
+        <li><a onclick = "loadDepartmentAtoZ()">Departments</a></li>
         <li><a onclick = "displayFacultyPage()">Faculty</a></li>
         <!--Search bar and 'Go' button-->
       </ul>
