--- a/template/index.html
+++ b/template/index.html
@@ -19,8 +19,9 @@
   <div class="topbar">
     <div>
       <ul id="topnav">
-        <li><a href="index.html">FS Class info logo</a></li>
-        <li><a href="CSCIcoursepage.html">Courses</a></li>
+        <li><a href="index.html"><img src = "FSCI-Logo.png" style="display: block; width: 100px; height: 25px"></a></li>
+        <li><a >Courses</a></li>
+        <!-- href="CSCIcoursepage.html" -->
         <li><a onclick = "loadDepartmentAtoZ()">Departments</a></li>
         <li><a onclick = "displayFacultyPage()">Faculty</a></li>
         <!--Search bar and 'Go' button-->
