home page update
added a home page description, and tinkered with the CSS a bit.

--- a/template/index.html
+++ b/template/index.html
@@ -39,6 +39,23 @@
   </div>
   <!--insert main page code starting here-->
   <div class="container" id="container">
+    <div class="grid-container">       
+      <div>
+          <section>
+            <h1>Fresno State Class Info</h1>
+            <p style="padding: 0 30px 0 30px;">Welcome to Fresno State Class Info (FSCI), our goal is to help you better understand Fresno State's class offerings. This website is intended for Future as well as Current students. The information provided here can assist students in at least these ways:
+            </p>
+            <ul>
+                <li>Better inform students on which electives to choose.</li>
+                <li>Which classes are complementary and/or relavent in the work force.</li>
+                <li>Inform which courses staisfy graduation requirements.</li>
+                <li>Provide additional background information, and resources on the course and instructor.</li>
+            </ul>
+          </section>
+      </div>
+      <div id="stockPhoto"></div>   
+  </div>
+</article>
   </div>
   <!--External Javascript
         <script src="scripts.js"></script>-->
