--- a/template/styles.css
+++ b/template/styles.css
@@ -98,8 +98,8 @@ body {
 
 .container{
   margin: 0;
-  padding: 0;
-  margin-top: 80px;
+  padding: 5px;
+  margin-top: 100px;
   margin-bottom: 180px;
   width: 100%;
   align-items: center;
@@ -460,4 +460,26 @@ body {font-family: "Lato", sans-serif;} */
   width: 93%;
   border-left: none;
   height: 500px;
+}
+/* Home Page CSS*/
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: 50% auto;
+  background-color: rgb(174, 172, 172);
+  border-style: hidden;
+  
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 0 5px 0 5px;
+  font-size: 20px;
+  
+}
+
+#stockPhoto {
+  width: 100%;
+  height: 667px;
+  background-image: url('classroomStocksmol.png');
+  background-repeat: no-repeat;
 }
