--- a/template/index.html
+++ b/template/index.html
@@ -11,6 +11,9 @@
   <script src="DataBase4Classes\allCsciData.js"></script>
   <script src="DataBase4Classes\allCsciProfData.js"></script>
   <script src="scripts.js"></script>
+  <script src="DataBase4Classes/DepartmentNames.js">   
+     alert(departmentNames[0]['A']);
+    </script>
 </head>
 <!--Start of main body-->
 
@@ -20,7 +23,7 @@
     <div>
       <ul id="topnav">
         <li><a href="index.html"><img src = "FSCI-Logo.png" style="display: block; width: 100px; height: 25px"></a></li>
-        <li><a >Courses</a></li>
+        <li><a >About Us</a></li>
         <!-- href="CSCIcoursepage.html" -->
         <li><a onclick = "loadDepartmentAtoZ()">Departments</a></li>
         <li><a onclick = "displayFacultyPage()">Faculty</a></li>
