--- a/template/index.html
+++ b/template/index.html
@@ -11,9 +11,8 @@
   <script src="DataBase4Classes\allCsciData.js"></script>
   <script src="DataBase4Classes\allCsciProfData.js"></script>
   <script src="scripts.js"></script>
-  <script src="DataBase4Classes/DepartmentNames.js">   
-     alert(departmentNames[0]['A']);
-    </script>
+  <script src="DataBase4Classes\DepartmentNames.js"></script>
+  <script src="DataBase4Classes\aboutUs.js"></script>
 </head>
 <!--Start of main body-->
 
@@ -23,7 +22,7 @@
     <div>
       <ul id="topnav">
         <li><a href="index.html"><img src = "FSCI-Logo.png" style="display: block; width: 100px; height: 25px"></a></li>
-        <li><a >About Us</a></li>
+        <li><a onclick="aboutUs()">About Us</a></li>
         <!-- href="CSCIcoursepage.html" -->
         <li><a onclick = "loadDepartmentAtoZ()">Departments</a></li>
         <li><a onclick = "displayFacultyPage()">Faculty</a></li>
@@ -42,7 +41,7 @@
   </div>
   <!--insert main page code starting here-->
   <div class="container" id="container">
-    <div class="grid-container">       
+    <div class="grid-container">
       <div>
           <section>
             <h1>Fresno State Class Info</h1>
