--- a/template/styles.css
+++ b/template/styles.css
@@ -89,7 +89,8 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  height: 1200px;
+  width: auto;
+  height: auto;
 }
 
 #bottomnav, #copyright, #topnav{
@@ -99,9 +100,9 @@ body {
 .container{
   margin: 0;
   padding: 5px;
-  margin-top: 100px;
-  margin-bottom: 180px;
+  margin-top: 79px;
   width: 100%;
+  height: auto;
   align-items: center;
   background-color: white;
 }
@@ -156,7 +157,7 @@ form{
   display: flex;
   background-color: #ced1d4;
   width: 900px;
-  height: 1200px;
+  height: 1000px;
   margin: auto;
   flex-direction: column;
 }
@@ -224,7 +225,7 @@ form{
 }
 
 #classDescript {
-  margin: 0 50px 0 50px;
+  margin: 0 50px 20px 50px;
 }
 #instructor {
   margin-left: 40px;
@@ -460,6 +461,7 @@ body {font-family: "Lato", sans-serif;} */
   width: 93%;
   border-left: none;
   height: 500px;
+  overflow-y: scroll;
 }
 /* Home Page CSS*/
 .grid-container {
@@ -488,4 +490,66 @@ body {font-family: "Lato", sans-serif;} */
 
 .PartOfClassList:hover{
   cursor: pointer;
+}
+
+
+
+
+
+
+/*Styling for the About us page*/
+#aboutUsPic1{
+  width: 100px;
+  height: 100px;
+  border: 1px black solid;
+}
+
+#aboutUsPic1{
+  cursor: pointer;
+}
+
+#fakeGrid{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+#fakeGrid h1{
+  font-size: 32px;
+}
+
+#fakeGrid p, #fakeGrid ul li {
+  font-size: 20px;
+}
+
+#fakeGrid #aboutPerson{
+  width: 50%;
+}
+#fakeGrid .aboutUsPicOne{
+  width: 50%;
+}
+
+#AboutUsPic2{
+  width: 300px;
+  height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#AboutUsContributions {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#fakeGrid #aboutCons{
+  width: 30%;
+}
+
+#AboutUsContributions li{
+  margin-bottom: 20px;
 }
