--- a/Department/department.css
+++ b/Department/department.css
@@ -1,5 +1,5 @@
 html, body {
-    background: linear-gradient(180deg, #75ddff 80%, #f4f7fb 20%);
+    background: linear-gradient(180deg, #9dd6e9 80%, #b3b7bb 20%);
     background-blend-mode: multiply;
     background-attachment: fixed;
     background-position: center;
