--- a/template/styles.css
+++ b/template/styles.css
@@ -406,14 +406,19 @@ body {font-family: "Lato", sans-serif;} */
   height: 1200px;
   margin: auto;
   flex-direction: row;
+
 }
 
 .flex-containerAtoZ > div {
+  text-align: left;
   background-color: #f1f1f1;
   margin: 1px;
   padding: 2px;
-  font-size: 25px;
+  font-size: 20px;
+  line-height: 10px;
+  
 
+  
 }
 
 .flexTab {
@@ -440,7 +445,7 @@ body {font-family: "Lato", sans-serif;} */
   text-align: left;
   cursor: pointer;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 /* Change background color of buttons on hover */
@@ -458,18 +463,20 @@ body {font-family: "Lato", sans-serif;} */
   right:0;
   /* padding: 0px 12px; */
   border: 1px solid #ccc;
-  width: 93%;
+  width: 100%;
   border-left: none;
   height: 500px;
   overflow-y: scroll;
+
+
 }
+
 /* Home Page CSS*/
 .grid-container {
   display: inline-grid;
   grid-template-columns: 50% auto;
   background-color: rgb(174, 172, 172);
   border-style: hidden;
-  
 }
 
 .grid-container > div {
