--- a/template/styles.css
+++ b/template/styles.css
@@ -529,6 +529,7 @@ body {font-family: "Lato", sans-serif;} */
 #fakeGrid{
   display: flex;
   width: 100%;
+  height: 80vh;
   align-items: center;
   justify-content: center;
 }
