More updates to css

--- a/template/index.html
+++ b/template/index.html
@@ -79,7 +79,7 @@
       <li>Search classes by departments</li>
     </ul>
     <!--Copyright year-->
-    <div id="bottomnav" style="float: left; margin-top: 13px;margin-bottom: 13px; margin-left: 40px;">
+    <div id="bottomnav" style="display: inline-grid;float: left; margin-top: 13px;margin-bottom: 13px; margin-left: 40px;">
       <script>document.write(new Date().getFullYear())</script>&#169; FSCI, All Rights Reserved.
     </div>
   </div>
